--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.fin
+{
+  text-decoration: none;
+  border: none;
+  border-bottom: 1px solid blue;
+  height:50px;
+  width:200px;
+  padding-top:10px;
+  
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.err
+{
+  margin-left:180px;
 }
