--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 {
   text-decoration: none;
   border: none;
-  border-bottom: 1px solid blue;
+  border-bottom: 1px solid green;
   height:50px;
   width:200px;
   padding-top:10px;
@@ -11,4 +11,8 @@
 .err
 {
   margin-left:180px;
+}
+.r1
+{
+  border-bottom: 2px solid green;
 }
